--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -36,6 +36,11 @@
     <!--Recipe Detail-->
     <string name="recipe_detail_item_label">Titre de la recette</string>
 
+    <string name="recipe_green_matching">Entre 80 et 100%</string>
+    <string name="recipe_orange_matching">Entre 50 et 79%</string>
+    <string name="recipe_red_matching">Entre 0 et 49%</string>
+
+    <string name="recipe_matching_definition">La correspondance en % nous donne la proportion d\'ingrédients dans mon Freezdge par rapport au nombre d\'ingrédients de la recette</string>
     <string name="recipe_detail_item_detail_time">Prép. : %s\nCuisson : %s</string>
     <string name="recipe_detail_item_total_time">Temps total : %s</string>
     <string name="recipe_detail_item_kcal">%s\nkcal</string>
@@ -120,6 +125,7 @@
     <string name="step_recipe">Etape %d : %s</string>
     <string name="internet_connexion">Pas de connexion internet</string>
     <string name="search_recipe_searchview_label">Recherche sur le nom d\'une recette…</string>
+    <string name="general_close">Fermer</string>
 
     <!--Array string -->
     <string name="array_filter_dessert">Dessert</string>
