--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,11 @@
     <string name="array_filter_plat">Principal dish</string>
     <string name="array_filter_cocktail">Cocktail</string>
     <string name="array_filter_all">All</string>
+    <string name="array_filter_dessert_title">Dessert (%d)</string>
+    <string name="array_filter_entry_title">Starter (%d)</string>
+    <string name="array_filter_plat_title">Principal dish (%d)</string>
+    <string name="array_filter_cocktail_title">Cocktail (%d)</string>
+    <string name="array_filter_all_title">All (%d)</string>
     <string name="array_dialog_title">Filter</string>
     <string name="array_filter_dessert_search" translatable="false">Desserts</string>
     <string name="array_filter_entry_search" translatable="false">Starter</string>
