--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,8 @@
     <string name="social_media_post_delete_message_dialog">Are you sure to delete this post</string>
     <string name="social_media_post_delete_confirmation_dialog">Post deleted</string>
     <string name="social_media_community">A community opens up to you</string>
+    <string name="popup_menu_update">Update</string>
+    <string name="popup_menu_delete">Delete</string>
 
     <!--Add post -->
     <string name="title_tips">Tip\'s title</string>
