--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -35,12 +35,12 @@
     <string name="recipe_list_item_label">Titre de la recette</string>
     <!--Recipe Detail-->
     <string name="recipe_detail_item_label">Titre de la recette</string>
-
     <string name="recipe_green_matching">Entre 80 et 100%</string>
     <string name="recipe_orange_matching">Entre 50 et 79%</string>
     <string name="recipe_red_matching">Entre 0 et 49%</string>
-
     <string name="recipe_matching_definition">La correspondance en % nous donne la proportion d\'ingrédients dans mon Freezdge par rapport au nombre d\'ingrédients de la recette</string>
+    <string name="recipe_grocery_list_dialog_title">Les ingrédients qui vous manquent pour cette recette</string>
+    <string name="recipe_grocery_list_dialog_all_matching">Vous avez tous les ingrédients pour faire cette recette !</string>
     <string name="recipe_detail_item_detail_time">Prép. : %s\nCuisson : %s</string>
     <string name="recipe_detail_item_total_time">Temps total : %s</string>
     <string name="recipe_detail_item_kcal">%s\nkcal</string>
