--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Freezdge</string>
-
+    <string name="app_version" translatable="false">v%s</string>
     <string name="menu_bottom_ingredient_at_home">Ingredients</string>
     <string name="menu_bottom_favourites">Favourites</string>
     <string name="menu_bottom_my_recipes">Recipes</string>
