feature : change preparation cooked, and total time in Int in database to calculate and filter better this items

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="menu_bottom_ingredient_at_home">Ingrédients</string>
     <string name="menu_bottom_favourites">Favoris</string>
-    <string name="menu_bottom_my_recipes">Rettes</string>
+    <string name="menu_bottom_my_recipes">Recettes</string>
     <string name="menu_bottom_social_media">Communauté</string>
     <string name="menu_grocery_list">Liste de courses</string>
     <string name="menu_logout">Déconnexion</string>
