--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,20 @@
     <string name="loginGoogle">Sign in with Google</string>
     <string name="appNameDescription">My fridge, my freeze, my Freezdge</string>
 
+    <!--Select day -->
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
+    <string name="snack">Snack</string>
+    <string name="day_dialog">SELECT A DAY</string>
+    <string name="day_ok_dialog">OK</string>
+
     <!-- LOGIN ACTIVITY -->
     <string name="error_authentication_canceled">Authentication cancelled&#8230;</string>
     <string name="error_no_internet">No internet connection!</string>
