--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -175,6 +175,8 @@
     <string name="recipe_list_number">%d recettes trouvées</string>
     <string name="recipe_list_number_one">%d recette trouvée</string>
     <string name="ingredient_list_clear">Liste d\'ingrédient vidée</string>
+    <string name="menu_bottom_calendar">Calendar</string>
+    <string name="no_item_found_calendar">Aucune recette planifiée pour l\'instant</string>
 
 
 </resources>
