--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -177,6 +177,7 @@
     <string name="ingredient_list_clear">Liste d\'ingrédient vidée</string>
     <string name="menu_bottom_calendar">Calendar</string>
     <string name="no_item_found_calendar">Aucune recette planifiée pour l\'instant</string>
+    <string name="ingredients_list_page_name">Mes ingrédients présents chez moi</string>
 
 
 </resources>
