--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="menu_info">How to use app?</string>
     <string name="menu_clear_ingredients_list">Clear ingredients list</string>
     <string name="menu_like_social_media">Like</string>
+    <string name="ingredients_list_page_name">My ingredients at home</string>
 
     <!--Toolbar-->
     <string name="toolbar_grocery_list">My grocery list</string>
