feature : change nav header ui

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -184,6 +184,7 @@
     <string name="no_item_found_liked_post">Aucun post liké pour l\'instant</string>
     <string name="recipe_suggestion_dialog">SUGGESTIONS DE RECETTES</string>
     <string name="chooseButton">CHOISIR</string>
+    <string name="nav_header_firstname">Salut %s</string>
 
 
 </resources>
